# mlx-ssl

./: .gitignore  pyproject.toml
.github/: README.md
.github/workflows/: python.yml
mlx_ssl/: utils.py
mlx_ssl/models/: __init__.py
mlx_ssl/models/data2vec/: layers.py  vision.py
mlx_ssl/models/simclr/: layers.py
src/models/data2vec/: layers.py
tests/: conftest.py
tests/models/data2vec/: test_layers.py
