[project]
name = "mlx-ssl"
version = "0.0.1"
description = "self-supervised learning on apple silicon"
readme = ".github/README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
  "huggingface-hub>=0.31.1",
  "ml-collections>=1.1.0",
  "mlx>=0.25.1",
]

[project.optional-dependencies]
dev = [
  "pre-commit",
  "pytest",
  "ruff"
]
scripts = [
  "torch"
]

[tool.setuptools.packages.find]
include = ["mlx_ssl*"]

[tool.ruff]
line-length = 90

[tool.ruff.lint]
select = ["E", "F", "I001"]

[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
  "ignore::DeprecationWarning",
	"ignore::UserWarning"
]
